--- a/RSExtension.csproj
+++ b/RSExtension.csproj
@@ -4,56 +4,57 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
 		<GamePath>D:\steam\tools\ContentBuilder\content\HDYLIEM\windows_x64</GamePath>
+		<AssemblyPath>\Rocket Science_Data\Managed</AssemblyPath>
   </PropertyGroup>
 
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Assembly-CSharp.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.Analysis">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.Analysis.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Analysis.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.API">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.API.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.API.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.Common">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.Common.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Common.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.Model">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.Model.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Model.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.Services">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.Services.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Services.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.Space">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.Space.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Space.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.Support">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.Support.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Support.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unbegames.UI">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unbegames.UI.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.UI.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
     <Reference Include="Unity.Mathematics">
-      <HintPath>$(GamePath)\Rocket Science_Data\Managed\Unity.Mathematics.dll</HintPath>
+      <HintPath>$(GamePath)$(AssemblyPath)\Unity.Mathematics.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
     </Reference>
