--- a/RSExtension.csproj
+++ b/RSExtension.csproj
@@ -2,62 +2,76 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-		<GamePath>D:\steam\tools\ContentBuilder\content\HDYLIEM\windows_x64</GamePath>
+		<GamePath>E:\SteamLibrary\steamapps\common\HDYLIEM</GamePath>
 		<AssemblyPath>\Rocket Science_Data\Managed</AssemblyPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>$(GamePath)$(AssemblyPath)\Assembly-CSharp.dll</HintPath>
+		<Reference Include="Assembly-CSharp">
+			<HintPath>$(GamePath)$(AssemblyPath)\Assembly-CSharp.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.Analysis">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Analysis.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.Analysis">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Analysis.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.API">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.API.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.API">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.API.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.Common">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Common.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.Common">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Common.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.Model">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Model.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.Model">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Model.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.Services">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Services.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.Services">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Services.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.Space">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Space.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.Space">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Space.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.Support">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Support.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.Support">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.Support.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unbegames.UI">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unbegames.UI.dll</HintPath>
+		</Reference>
+		<Reference Include="Unbegames.UI">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unbegames.UI.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
-    <Reference Include="Unity.Mathematics">
-      <HintPath>$(GamePath)$(AssemblyPath)\Unity.Mathematics.dll</HintPath>
+		</Reference>
+		<Reference Include="Unity.Mathematics">
+			<HintPath>$(GamePath)$(AssemblyPath)\Unity.Mathematics.dll</HintPath>
 			<Private>false</Private>
 			<ExcludeAssets>all</ExcludeAssets>
-    </Reference>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>$(GamePath)$(AssemblyPath)\UnityEngine.CoreModule.dll</HintPath>
+			<Private>false</Private>
+			<ExcludeAssets>all</ExcludeAssets>
+		</Reference>
+		<Reference Include="Newtonsoft.Json">
+			<HintPath>$(GamePath)$(AssemblyPath)\Newtonsoft.Json.dll</HintPath>
+			<Private>false</Private>
+			<ExcludeAssets>all</ExcludeAssets>
+		</Reference>
+		<Reference Include="UnitsNet">
+			<HintPath>$(GamePath)$(AssemblyPath)\UnitsNet.dll</HintPath>
+			<Private>false</Private>
+			<ExcludeAssets>all</ExcludeAssets>
+		</Reference>
   </ItemGroup>
 
 </Project>
